--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Test new</h1>
-</body>
-</html>
-
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><link rel="icon" href="img/favic.ico" type="image/icon"><title>part 3</title><script defer="defer" src="638.cf9601a0118fd630d8c0.js"></script><script defer="defer" src="main.99937042c7b0276965b1.js"></script><script defer="defer" src="second.5da9806dff0d6c0b69ba.js"></script><link href="main.bab77324d8c6ceeda96d.css" rel="stylesheet"></head><body><div class="container"><h1>TEST Step 3</h1><hr><h3>background</h3><div id="backgroundTest"></div><hr><h3>img</h3><div id="img"><img src=""></div></div></body></html>
